# tempo

./: BATCH_METRICS_PLAN.md  CHANGELOG.md
cmd/anon-query/: README.md  main.go  main_test.go
cmd/tempo-vulture/: main.go
modules/blockbuilder/: blockbuilder.go  partition_writer.go
modules/frontend/: frontend.go  mcp_tools.go  metrics_query_handler.go  metrics_query_range_handler.go  metrics_query_range_handler_test.go  metrics_query_range_sharder.go  search_handlers.go  search_sharder.go
modules/generator/: instance.go
modules/ingester/: instance_search.go  local_block.go
modules/livestore/: downscale.go  instance.go  instance_search.go  live_store.go  live_store_background.go  live_store_test.go  partition_reader.go  partition_reader_test.go
modules/querier/: querier.go  querier_query_range.go
pkg/api/: http.go
pkg/parquetquery/: iters.go  iters_test.go  predicates.gen.go  predicates.go  predicates_test.go
pkg/parquetquerygen/: predicates.go
pkg/tempopb/: tempo.pb.go  tempo.proto
pkg/traceql/: anonymize.go  anonymize_test.go  ast.go  ast_conditions.go  ast_conditions_test.go  ast_execute.go  ast_execute_test.go  ast_metrics.go  ast_metrics_math.go  ast_rewriter.go  ast_rewriter_test.go  ast_stringer.go  ast_test.go  ast_validate.go  combine.go  engine.go  engine_metrics.go  engine_metrics_average.go  engine_metrics_compare.go  engine_metrics_test.go  engine_test.go  (+10 more)
tempodb/: tempodb.go  tempodb_metrics_test.go  tempodb_search_test.go  tempodb_test.go
translator/: Cargo.toml  Dockerfile  README.md
translator/src/: main.rs  sql_to_traceql.rs
(+39 files in other folders)
