[package]
name = "sql-to-fetchrequest"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "44"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
axum = "0.7"

[[bin]]
name = "sql-to-fetchrequest"
path = "src/main.rs"

[[bin]]
name = "sql-to-traceql"
path = "src/sql_to_traceql.rs"

